Updated section name as second-section;

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="">
+    <section class="second-section">
         <div class="section-header"></div>
         <div class="row">
             <div class="left">
                 <div>
-
                     <div class="swimming-pool-image">
                         <!-- <img src="img/IMG_8108.jpg" alt="Swimming pool image with CEO"> -->
                     </div>
@@ -41,6 +40,11 @@
                 <div class="magazine-photo">
                     <img src="img/IMG_8131.jpg" alt="">
                     <span>Mike Hofman, Editor-in-Chief, Inc Magazine</span>
+                    <!-- <ul class="line">
+                        <li></li>
+                        <hr/>
+                        <li></li>
+                    </ul> -->
                     <p>
                         Our very own Rahul Agaskar, Founder and CEO, had the opportunity to attend the event in person, representing Neutrino Advisory among a community of innovative leaders. From engaging discussion on scaling businesses to networking with industry pioneers, the experience was invaluable.
                     </p>
